Version 1.3.5+svn:
 * language and i18n:
   * updated translations: Danish, Finnish, French, German
 * multiplayer:
   * the random start ToD option is now properly saved and loaded (bug #9532)
   * the map in the lobby could be randomly invisible due to an unitialized
     variable (bug #9555)
 * miscellaneous and bug fixes
   * various code cleanups
   * proper handling of description autogeneration for per level [effect] on
     level 0 units
   * updated the copyright info in the source files also made it explicit
     Wesnoth is GPL 2 only (Wesnoth was already GPL 2 only)

Version 1.3.5:
 * campaigns
   * Heir to the Throne
     * The Elvish Lord's and Elvish High Lord's faerie fire attacks have been
       changed from cold to arcane and reduced from 8-3 and 8-5 to 7-3 and 7-5
       respectively
     * The obsolete Cockatrice unit has been removed
     * The bugs in HttT's SoF scenario have been fixed
   * Sceptre of Fire
     * changed Haldric II a bit and gave him new a sprite and animations
   * fixed teamcolourless fake unit moves in TRoW, HttT, EI, SoF, NR, TSG and
     TB
 * mad editor:
   * new checkbox for the "delay transition update" option
 * graphics
   * new animations: elvish scout idle
   * fix bug #9398 (attacking units always above defending units)
 * sounds and music
   * removed unused sounds: firearrow.wav, hatchet.ogg
 * language and i18n:
   * updated translations: Czech, Danish, Finnish, French, Galician, German,
     Greek, Indonesian, Japanese, Lithuanian, Polish, Spanish, Swedish
   * updated DejaVuSans font to version 2.18
 * multiplayer:
   * revised maps: Blitz, Cynsaun Battlefield, Hamlets, Sablestone Delta,
     Silverhead Crossing, Sulla's Ruins, Blue Water Province, Clash
   * fix MP crash on next scenario, thanks to Rhuvaen
 * units
   * new "mechanical" trait, meant to show mechanical unit are immune to poison
   * balancing changes:
     * changed the 'resilient' trait from +3HP +10% to +4HP + 1HP * unit level