@@ -5,6 +5,8 @@ Version 1.3.5+svn:
    * the random start ToD option is now properly saved and loaded (bug #9532)
    * the map in the lobby could be randomly invisible due to an unitialized
      variable (bug #9555)
+   * the automatic unit description used a non-MP safe way, this has been
+     fixed
  * miscellaneous and bug fixes
    * various code cleanups
    * proper handling of description autogeneration for per level [effect] on
